add the footer in the page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
         </div>
       </div>
     </div>
+
+    <!-- Footer Section -->
+    <footer>
+      <p>
+        Created by
+        <a href="https://github.com/manish8561" target="_blank">Manish8561</a>
+      </p>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
